deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
spec:
  replicas: 2
  selector:
    matchLabels:
      run: gateway
  template:
    metadata:
      labels:
        run: gateway
    spec:
      containers:
      - name: gateway
        image: asthenosphere/gateway
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
spec:
  replicas: 1
  selector:
    matchLabels:
      run: auth
  template:
    metadata:
      labels:
        run: auth
    spec:
      containers:
      - name: auth
        image: asthenosphere/auth
        imagePullPolicy: Always
        ports:
        - containerPort: 8001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: history
spec:
  replicas: 1
  selector:
    matchLabels:
      run: history
  template:
    metadata:
      labels:
        run: history
    spec:
      containers:
      - name: history
        image: asthenosphere/history
        imagePullPolicy: Always
        ports:
        - containerPort: 8002
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pairing
spec:
  replicas: 1
  selector:
    matchLabels:
      run: pairing
  template:
    metadata:
      labels:
        run: pairing
    spec:
      containers:
      - name: pairing
        image: asthenosphere/pairing
        imagePullPolicy: Always
        ports:
        - containerPort: 8003
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: video
spec:
  replicas: 1
  selector:
    matchLabels:
      run: video
  template:
    metadata:
      labels:
        run: video
    spec:
      containers:
      - name: video
        image: asthenosphere/video
        imagePullPolicy: Always
        ports:
        - containerPort: 8004
