deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway
  labels:
    run: gateway
spec:
  type: NodePort
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: gateway
  selector:
    run: gateway
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    run: frontend
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: frontend
  selector:
    run: frontend

---
apiVersion: v1
kind: Service
metadata:
  name: auth
  labels:
    run: auth
spec:
  type: NodePort
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: auth
  selector:
    run: auth
---
apiVersion: v1
kind: Service
metadata:
  name: history
  labels:
    run: history
spec:
  type: NodePort
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: history
  selector:
    run: history
---
apiVersion: v1
kind: Service
metadata:
  name: pairing
  labels:
    run: pairing
spec:
  type: NodePort
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: pairing
  selector:
    run: pairing
---
apiVersion: v1
kind: Service
metadata:
  name: video
  labels:
    run: video
spec:
  type: NodePort
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: video
  selector:
    run: video
---
apiVersion: v1
kind: Service
metadata:
  name: code-executor
  labels:
    run: code-executor
spec:
  type: NodePort
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: code-executor
  selector:
    run: code-executor
---
apiVersion: v1
kind: Service
metadata:
  name: room
  labels:
    run: room
spec:
  type: NodePort
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: room
  selector:
    run: room
---
apiVersion: v1
kind: Service
metadata:
  name: coding
  labels:
    run: coding
spec:
  type: NodePort
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: coding
  selector:
    run: coding
---
apiVersion: v1
kind: Service
metadata:
  name: mongo
  labels:
    run: mongo
spec:
  type: NodePort
  ports:
    - port: 27017
      targetPort: 27017
      protocol: TCP
      name: mongo
  selector:
    run: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: db
  labels:
    run: db
spec:
  type: NodePort
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
      name: db
  selector:
    run: db
---
