deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: code2gather-ingress
  annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  rules:
    - http:
        paths:
          - path: /gateway
            pathType: Prefix
            backend:
              service:
                name: gateway-service
                port:
                  number: 8000
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 8001
          - path: /history
            pathType: Prefix
            backend:
              service:
                name: history-service
                port:
                  number: 8002
          - path: /pairing
            pathType: Prefix
            backend:
              service:
                name: pairing-service
                port:
                  number: 8003
          - path: /video
            pathType: Prefix
            backend:
              service:
                name: video-service
                port:
                  number: 8004
          - path: /code-executor
            pathType: Prefix
            backend:
              service:
                name: code-executor-service
                port:
                  number: 8005
          - path: /room
            pathType: Prefix
            backend:
              service:
                name: room-service
                port:
                  number: 8006
          - path: /coding
            pathType: Prefix
            backend:
              service:
                name: coding-service
                port:
                  number: 8007
